<resources>
    <string name="app_name">usadz_ich</string>
    <string name="scheme">UKŁAD</string>
    <string name="list">LISTA GOŚCI</string>
    <string name="sit_scheme">USADZENIE</string>
    <string name="official_name">Usadź ich!</string>
    <string name="add_guests_list">DODAJ GOŚCI</string>
    <string name="guest_name">nazwa gościa</string>
    <string name="end_adding_guests">KONIEC</string>
    <string name="add_next_guest">NASTĘPNY</string>
    <string name="problems">WARUNKI</string>
    <string name="condition_firstly">NAJPIERW NALEŻY WYBRAĆ RODZAJ WARUNKU</string>
    <string name="rectangular">PROSTOKĄTNY</string>
    <string name="round">OKRĄGŁY</string>
    <string name="add">DODAJ</string>
    <string name="tittle">MENU</string>
    <string name="export_json">Export do formatu aplikacji</string>
    <string name="import_csv">Import listy gości csv</string>
    <string name="import_json">Import całego planu</string>
    <string name="no_content">TA ZAKŁADKA JEST PUSTA</string>
    <string name="groups">GRUPY</string>
</resources>
