<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="61dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@android:color/white"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/chairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheme" />

        <android.support.design.widget.TabItem
            android:id="@+id/guests_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <android.support.design.widget.TabItem
            android:id="@+id/sitting_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sit_scheme" />
    </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>