<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="379dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/rectangular"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="431dp" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:text="goście" />

        <EditText
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_dark_background"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:inputType="text"
            android:hint="nazwa stołu"
            android:imeOptions="actionDone"/>


        <TextView
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:padding="20dp"
            android:textSize="@dimen/text_size"
            android:text="goście" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:text="Szerokość stołu"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="379dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height">

            <EditText
                android:id="@+id/number_of_people_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="number"
                android:imeOptions="actionDone"
                />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/add" />


        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
